[package]
name = "stratum"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest =  { version = "0.10.0-alpha.2", features = ["blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = "1.0.134"
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
crypto = "0.5.1"
url = "2.2.2"
cargo-inspect = "0.10.3"
image = "0.23"
regex = "1"